--- a/wp-content/themes/elmuar/sass/site/secondary/_footer.scss
+++ b/wp-content/themes/elmuar/sass/site/secondary/_footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-  margin: 10% auto 0;
+  margin: 5% auto 0;
   width: 100%;
   // max-width: 85rem;
   // margin-top: 2rem;
